[metadata]
name = influx_logging_handler
version = attr: influx_logging_handler.__version__
description = Handler for logging messages to InfluxDB 2 via Python logging -module.
author = Kimmo Huoman
author_email = kipenroskaposti+influx_logging_handler@gmail.com
url =https://github.com/FlazeBot/InfluxLoggingHandler/
license = MIT

[options]
packages = influx_logging_handler
python_requires = >=3.7
install_requires =
    influxdb-client >= 1.37.0
